# ecommerce-data-platform

./: .dockerignore  .env.example  .env.template  .gitignore  .gitmessage  .mise.toml  .pre-commit-config.yaml  .secrets.baseline  .sqlfluff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
.claude/agents/: backend-api-architect.md
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 20250727_1543-18bd19b54443_initial_schema_with_functions.py  20250731_2225-f9d7361812e9_add_minimal_reference_data.py  20250801_1106-500e99a283fd_sync_server_defaults.py  20250801_1142-dfff37cd836e_add_currency_and_status_reference_data.py
config/: application.yaml  database.yaml
docker/postgres/: init.sql  init_dependencies.sql
docs/: README.md  aws-security-solo-dev.md  database-migrations.md  development-rulebook.md  docker-guide.md  local-development.md  modern-data-engineering-setup.md  python-development-rules.md  python-quick-reference.md  python-setup.md  tdd-example.md  test-coverage-gaps.md
docs/events/: event-catalog.md  schema-evolution.md
models/: .sqlfluff
roadmap/: README.md  initial-roadmap.md  testing-roadmap.md  week1-day1-modern.md  week1-todo-list.md
roadmap/week1/: README.md  data-model-brainstorm.md  day1-modern.md  day2-modern.md  day3-modern.md  todo-list.md
scripts/: awslocal  docker-security-scan.sh  init_aws_resources.sh  localstack-env.sh  test_changed_files.py  test_db_init.sh  tf-local.sh
scripts/git-hooks/: install-hooks.sh  pre-push
sql/schema/: 001_initial_schema.sql  uuid-v7-implementation.md
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py  middleware.py
src/api/v1/routers/: health.py
src/core/: config.py
src/database/: __init__.py  functions.py
src/events/: __init__.py  base.py  registry.py  taxonomy.py
src/events/schemas/: __init__.py  customer.py  inventory.py  order.py  payment.py
src/models/: __init__.py  audit.py  base.py  customer.py  inventory.py  order.py  payment.py  product.py  review.py  shopping.py
src/pipelines/: __init__.py  definitions.py  workspace.yaml
terraform/: README.md  versions.tf
terraform/environments/local/: main.tf
terraform/modules/dynamodb/: main.tf
terraform/modules/kinesis/: main.tf
terraform/modules/s3_data_lake/: main.tf
terraform/modules/sqs/: main.tf
tests/: TEST_FIX_SUMMARY_2025-08-01.md  TEST_STATUS_2025-08-01.md  __init__.py  conftest.py  test_config.py  test_database_init.py  test_migrations.py  test_setup.py
tests/api/: __init__.py  test_app.py
tests/events/: __init__.py  test_registry.py
tests/models/: conftest.py  test_base.py  test_customer.py  test_models_basic.py  test_order.py  test_product.py  test_reference_data.py  test_reference_data_schema.py
